--- a/app.json
+++ b/app.json
@@ -22,7 +22,12 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
-    }
+      "supportsTablet": true,
+      "bundleIdentifier": "shake-the-boredom-away"
+    },
+    "android": {
+      "package": "shake-the-boredom-away"
+    },
+    "entryPoint": "node_modules/expo/AppEntry.js"
   }
 }
