--- a/ios/Shake the Boredom Away.xcodeproj/xcshareddata/xcschemes/Shake the Boredom Away.xcscheme
+++ b/ios/Shake the Boredom Away.xcodeproj/xcshareddata/xcschemes/Shake the Boredom Away.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "helloWorld.app"
-               BlueprintName = "helloWorld"
-               ReferencedContainer = "container:helloWorld.xcodeproj">
+               BuildableName = "Shake the Boredom Away.app"
+               BlueprintName = "Shake the Boredom Away"
+               ReferencedContainer = "container:Shake the Boredom Away.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "helloWorldTests.xctest"
-               BlueprintName = "helloWorldTests"
-               ReferencedContainer = "container:helloWorld.xcodeproj">
+               BuildableName = "shakeTheBoredomAwayTests.xctest"
+               BlueprintName = "shakeTheBoredomAwayTests"
+               ReferencedContainer = "container:Shake the Boredom Away.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -55,29 +55,27 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "Shake the Boredom Away.app"
+            BlueprintName = "Shake the Boredom Away"
+            ReferencedContainer = "container:Shake the Boredom Away.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "helloWorldTests.xctest"
-               BlueprintName = "helloWorldTests"
-               ReferencedContainer = "container:helloWorld.xcodeproj">
+               BuildableName = "shakeTheBoredomAwayTests.xctest"
+               BlueprintName = "shakeTheBoredomAwayTests"
+               ReferencedContainer = "container:Shake the Boredom Away.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "helloWorld.app"
-            BlueprintName = "helloWorld"
-            ReferencedContainer = "container:helloWorld.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -94,13 +92,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "helloWorld.app"
-            BlueprintName = "helloWorld"
-            ReferencedContainer = "container:helloWorld.xcodeproj">
+            BuildableName = "Shake the Boredom Away.app"
+            BlueprintName = "Shake the Boredom Away"
+            ReferencedContainer = "container:Shake the Boredom Away.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -113,9 +109,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "helloWorld.app"
-            BlueprintName = "helloWorld"
-            ReferencedContainer = "container:helloWorld.xcodeproj">
+            BuildableName = "Shake the Boredom Away.app"
+            BlueprintName = "Shake the Boredom Away"
+            ReferencedContainer = "container:Shake the Boredom Away.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
