--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-screens": "~2.2.0",
+    "react-native-shake": "^3.4.0",
     "react-native-unimodules": "~0.9.0",
-    "react-native-web": "~0.11.7",
-    "react-native-shake": "^3.4.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
+    "babel-preset-expo": "^8.1.0",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.9.0",
-    "babel-preset-expo": "^8.1.0"
+    "react-native-dotenv": "^0.2.0",
+    "react-test-renderer": "~16.9.0"
   },
   "private": true
 }
