--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "ios": "react-native run-ios"
   },
   "dependencies": {
+    "@svgr/cli": "^5.3.1",
     "expo": "^37.0.6",
+    "expo-font": "^8.1.1",
     "expo-updates": "~0.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -14,6 +16,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-screens": "~2.2.0",
     "react-native-shake": "^3.4.0",
+    "react-native-svg": "^12.1.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7"
   },
